[gd_scene load_steps=51 format=3 uid="uid://cuy20am731ocf"]

[ext_resource type="Texture2D" uid="uid://swm458khq3l4" path="res://assets/_Run.png" id="1_s4als"]
[ext_resource type="Script" path="res://Entities/player.gd" id="1_yrvga"]
[ext_resource type="Texture2D" uid="uid://brwon86phxlnk" path="res://assets/_Idle.png" id="2_1s3ay"]
[ext_resource type="Texture2D" uid="uid://bycd1mo5glb3w" path="res://assets/_Fall.png" id="2_ye4gt"]
[ext_resource type="Texture2D" uid="uid://txuihbslvt5w" path="res://assets/_Jump.png" id="3_ftlpo"]
[ext_resource type="Texture2D" uid="uid://dh4smcwl7butl" path="res://assets/_Attack2.png" id="4_bkyru"]
[ext_resource type="Script" path="res://StateMachine/idle.gd" id="7_b6as4"]
[ext_resource type="Script" path="res://StateMachine/state_machine.gd" id="7_h564n"]
[ext_resource type="Script" path="res://StateMachine/run.gd" id="9_s3jxy"]
[ext_resource type="Script" path="res://StateMachine/jump.gd" id="10_tp2a3"]
[ext_resource type="Script" path="res://StateMachine/fall.gd" id="11_bq1s7"]
[ext_resource type="Script" path="res://StateMachine/attack.gd" id="12_5au0a"]
[ext_resource type="Script" path="res://Health/health.gd" id="13_fpp71"]
[ext_resource type="Script" path="res://Health/hitbox.gd" id="14_k6b5d"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gfqq6"]
atlas = ExtResource("4_bkyru")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ororr"]
atlas = ExtResource("4_bkyru")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_vl7vj"]
atlas = ExtResource("4_bkyru")
region = Rect2(240, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_uw0q6"]
atlas = ExtResource("4_bkyru")
region = Rect2(360, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_lcoav"]
atlas = ExtResource("4_bkyru")
region = Rect2(480, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_wycdn"]
atlas = ExtResource("4_bkyru")
region = Rect2(600, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_a1jrs"]
atlas = ExtResource("2_ye4gt")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ok2gm"]
atlas = ExtResource("2_ye4gt")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqhft"]
atlas = ExtResource("2_ye4gt")
region = Rect2(240, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikcl6"]
atlas = ExtResource("3_ftlpo")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_7p0xh"]
atlas = ExtResource("3_ftlpo")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_wa8fo"]
atlas = ExtResource("3_ftlpo")
region = Rect2(240, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nf78"]
atlas = ExtResource("1_s4als")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_iyvcp"]
atlas = ExtResource("1_s4als")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_nsr0b"]
atlas = ExtResource("1_s4als")
region = Rect2(240, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_oy6uq"]
atlas = ExtResource("1_s4als")
region = Rect2(360, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_lc7ui"]
atlas = ExtResource("1_s4als")
region = Rect2(480, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_srcuq"]
atlas = ExtResource("1_s4als")
region = Rect2(600, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_5hw8m"]
atlas = ExtResource("1_s4als")
region = Rect2(720, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_dw5c0"]
atlas = ExtResource("1_s4als")
region = Rect2(840, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_vppfk"]
atlas = ExtResource("1_s4als")
region = Rect2(960, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3ypv"]
atlas = ExtResource("1_s4als")
region = Rect2(1080, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_vv4mp"]
atlas = ExtResource("2_1s3ay")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdxar"]
atlas = ExtResource("2_1s3ay")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ftisl"]
atlas = ExtResource("2_1s3ay")
region = Rect2(240, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_nkrqc"]
atlas = ExtResource("2_1s3ay")
region = Rect2(360, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2a1ga"]
atlas = ExtResource("2_1s3ay")
region = Rect2(480, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gmc8"]
atlas = ExtResource("2_1s3ay")
region = Rect2(600, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_iq0i6"]
atlas = ExtResource("2_1s3ay")
region = Rect2(720, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_vk541"]
atlas = ExtResource("2_1s3ay")
region = Rect2(840, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_hulv2"]
atlas = ExtResource("2_1s3ay")
region = Rect2(960, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_aakvb"]
atlas = ExtResource("2_1s3ay")
region = Rect2(1080, 0, 120, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_g3jjq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gfqq6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ororr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vl7vj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uw0q6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lcoav")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wycdn")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1jrs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ok2gm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqhft")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikcl6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7p0xh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wa8fo")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nf78")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iyvcp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nsr0b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oy6uq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lc7ui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_srcuq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hw8m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dw5c0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vppfk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3ypv")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vv4mp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdxar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ftisl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkrqc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2a1ga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gmc8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iq0i6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vk541")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hulv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aakvb")
}],
"loop": true,
"name": &"stand",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6oiec"]
radius = 16.0
height = 80.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ts0ij"]
radius = 39.0
height = 108.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2gnqi"]
radius = 16.0
height = 80.0

[node name="Player" type="CharacterBody2D"]
position = Vector2(59, 116)
script = ExtResource("1_yrvga")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(-128, -174)
scale = Vector2(2.06348, 2.16236)
sprite_frames = SubResource("SpriteFrames_g3jjq")
animation = &"attack"
frame = 5
frame_progress = 1.0
speed_scale = 3.0
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-16, -40)
shape = SubResource("CapsuleShape2D_6oiec")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("7_h564n")
initial_state = NodePath("IdleState")

[node name="IdleState" type="Node" parent="StateMachine"]
script = ExtResource("7_b6as4")

[node name="RunState" type="Node" parent="StateMachine"]
script = ExtResource("9_s3jxy")

[node name="JumpState" type="Node" parent="StateMachine"]
script = ExtResource("10_tp2a3")

[node name="FallState" type="Node" parent="StateMachine"]
script = ExtResource("11_bq1s7")

[node name="AttackState" type="Node" parent="StateMachine"]
script = ExtResource("12_5au0a")

[node name="Health" type="Node" parent="."]
script = ExtResource("13_fpp71")

[node name="BasicAttack" type="Area2D" parent="."]
position = Vector2(43, -45)
collision_mask = 0
script = ExtResource("14_k6b5d")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="BasicAttack"]
position = Vector2(-1, 0)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_ts0ij")
disabled = true

[node name="HurtBox" type="Area2D" parent="."]
position = Vector2(-15, -41)
collision_layer = 0
collision_mask = 2
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CapsuleShape2D_2gnqi")
